# rhythm-game

./: .gitignore  README.md  main.py  pyproject.toml  rhythm-game.py
design/: readme.md  rhythm-game.fig
lib/: gameMaster.py
lib/UI/: button.py  rect.py  text.py  uiController.py
