[tool.poetry]
name = "rhythm-game"
version = "0.1.0"
description = ""
authors = ["seonghwan7694 <seonghwan7694@gmail.com>"]
readme = "README.md"
packages = [{include = "rhythm_game"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
